@startuml ZooSimulatorRules
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam dpi 120
top to bottom direction

title Zoo Simulator - Rules

package "Domain.Animals" {
  class Animal {
    +CanReproduceToday() : bool
    +CanStartGestationToday() : bool
    +CanLayEggThisMonth(month) : bool
    +TryCatchDiseaseToday() : bool
    +ContractSickness(random) : bool
  }

  class AnimalProfile {
    +DaysBeforeHungry : int
    +GestationDays : int?
    +InfantMortalityRate : decimal?
    +AnnualDiseaseProbability : decimal
    +BaseDiseaseDurationDays : int
  }
}

package "Domain.Reproduction" {
  class ReproductionRules {
    +NoAdultReproductionFirstArrivalMonth : bool
  }

  class ReproductionService {
    +ProcessGestations(animals) : List<ZooAnimal>
    +ProcessEggIncubations(animals) : List<ZooAnimal>
    +TryStartPregnancies(animals) : void
    +TryEggLayingForCurrentMonth(animals, month) : void
  }
}

package "Application.Simulation" {
  class ZooSimulationService {
    +ProcessDailyFeeding() : void
    +ProcessGestations() : void
    +ProcessEggIncubations() : void
    +TryStartPregnancies() : void
    +TryApplyMonthlyExceptionalEvents(dayOfMonth) : void
  }
}

Animal --> AnimalProfile
ReproductionService --> ReproductionRules
ReproductionService ..> Animal
ZooSimulationService ..> Animal
ZooSimulationService ..> ReproductionService

note bottom of Animal
Critical business rules:
- reproduction blocked if hungry or sick
- gestating female food need x2
- hungry female loses fetus
- adult arrival reproduction block = 30 days
- disease duration varies by +/-20%
- disease mortality = 10%
end note
@enduml
